# maestro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kill_ros.sh  package.xml
CSV/: CoM.csv  Errors.csv  Forces.csv  Log.csv  Weights.csv
CSV-Experiments/adapt-slip1/: Log.csv
CSV-Experiments/nude-slip1/: Log.csv
SavedCSVfromExperiments/NewExperiments/RecordTips/: LogTips-2diag-adapt.csv  LogTips-2diag.csv  LogTips-Global.csv
SavedCSVfromExperiments/NewExperiments/Simulation/: Log-1foot.csv  Log-2diag.csv  Log-2front-adapt.csv  Log-2front.csv  Log-3.csv  Log-4Global.csv  new_experiment_params.txt
SavedCSVfromExperiments/NewExperiments/Simulation-Infinity/: Log-inf-adapt.csv  Log-inf-withoutadapt.csv  new_experiments_inf_params.txt
SavedCSVfromExperiments/RealRobot/CSV-ADAPT-SlipTerrain/: Log.csv  description.txt
SavedCSVfromExperiments/RealRobot/CSV-withoutADAPT-SlipTerrain/: Log.csv  description.txt
SavedCSVfromExperiments/RealRobot/CSV-withoutAdapt-ClearTerrain/: description.txt
SavedCSVfromExperiments/Simulation/: experiment.params  params.txt
SavedCSVfromExperiments/Simulation/adapt-4slip/: Log.csv
SavedCSVfromExperiments/Simulation/for-video/: Log-nude.csv
SavedCSVfromExperiments/Simulation/nude-slip4/: Log.csv
go1_description/config/: joint_names.yaml
go1_description/connection/: Go1Config.txt  ipconfig_simple.sh
go1_description/launch/: go1_rviz.launch
go1_description/urdf/: go1_slip.urdf  go1_slip1.urdf  go1_slip2.urdf  go1_slip_stack.urdf
go1_description_maestro/config/: joint_names.yaml
include/: CommunicationHandler.h  Controller.h  DataHandler.h  GazeboInterpreter.h  Leg.h  Math.h  Robot.h
launch/: basic.launch  basic2.launch  contact.launch  startup.launch
msg/: Foot.msg  LowCmdROS.msg  LowCmdRos.msg  LowStateROS.msg  LowStateRos.msg
rviz/: go1_maestro.rviz
src/: CommunicationHandler.cpp  Controller.cpp  DataHandler.cpp  GazeboInterpreter.cpp  Leg.cpp  MainHandler.cpp  Math.cpp  Robot.cpp  bezier  bezier.csv  bezierTraj.cpp  bezier_curve.cpp  comments.cpp  data.csv  normal_distribution  normal_distribution.cpp  plot.py  t  traj.csv
src/contact_estimation/: virtual_imu.cpp
src/contact_estimation/contacts/: fl_pce.py  fr_pce.py  params.csv  rl_pce.py  rr_pce.py
src/plots/: experiments.txt  plo-brokenAxis.py  plot.py  plot_2.py  plot_3.py  plot_normal_distribution.py  plot_traj.py  plot_walk.py  plotsimple.py  super_G.py
worlds/: earth.world  earth2front.world  earth2sym.world  earth3slip.world  earthFL.world  earthGlobalSlip.world  earthnormal.world  earthwalk.world  slipwalk.world
